# CSR-Script-Evaluator

./: .gitignore  LICENSE  README.md  pyproject.toml
src/csr_script_evaluator/: __init__.py  command_executor.py  core_agent.py  eval.py  main.py  script_evaluator.py  state.py
src/csr_script_evaluator/data/: 1.sh  10.sh  100.sh  101.sh  11.sh  12.sh  13.sh  14.sh  15.sh  16.sh  17.sh  18.sh  19.sh  2.sh  20.sh  21.sh  22.sh  23.sh  24.sh  25.sh  26.sh  27.sh  28.sh  29.sh  3.sh  30.sh  31.sh  32.sh  33.sh  34.sh  35.sh  36.sh  37.sh  38.sh  39.sh  4.sh  40.sh  41.sh  42.sh  43.sh  (+50 more)
src/csr_script_evaluator/data2/: 1.sh  10.sh  100.sh  11.sh  12.sh  13.sh  14.sh  15.sh  16.sh  17.sh  18.sh  19.sh  2.sh  20.sh  21.sh  22.sh  23.sh  24.sh  25.sh  26.sh  27.sh  28.sh  29.sh  3.sh  30.sh  31.sh  32.sh  33.sh  34.sh  35.sh  36.sh  37.sh  38.sh  39.sh  4.sh  40.sh  41.sh  42.sh  43.sh  44.sh  (+61 more)
